User crud: update swagger docs
