# apps/user/controllers/user.go
@@ -56,7 +56,6 @@ func (uc UserController) ListUser(c *gin.Context) {
 // @Param repeatPassword formData string true "repeatPassword that have at least 8 length and contain an alphabet and number "
 // @Param firstName formData string true "firstName"
 // @Param lastName formData string true "lastName"
-// @Param isAdmin formData bool true "isAdmin"
 // @Success 200 {object} swagger.UsersListResponse
 // @failure 401 {object} swagger.UnauthenticatedResponse
 // @failure 403 {object} swagger.AccessForbiddenResponse
@@ -119,6 +118,23 @@ func (uc UserController) DeleteUser(c *gin.Context) {
 	uc.paginateUserList(c, "User deleted successfully !")
 }
 
+// @Summary update user
+// @Schemes
+// @Description update user or admin , admin only
+// @Tags admin
+// @Accept json
+// @Produce json
+// @Param id path int true "user id"
+// @Param email formData string true "unique email"
+// @Param password formData string true "password that have at least 8 length and contain an alphabet and number "
+// @Param repeatPassword formData string true "repeatPassword that have at least 8 length and contain an alphabet and number "
+// @Param firstName formData string true "firstName"
+// @Param lastName formData string true "lastName"
+// @Success 200 {object} swagger.SingleUserResponse
+// @failure 401 {object} swagger.UnauthenticatedResponse
+// @failure 404 {object} swagger.NotFoundResponse
+// @failure 403 {object} swagger.AccessForbiddenResponse
+// @Router /admin/users/{id} [put]
 func (uc UserController) UpdateUser(c *gin.Context) {
 	var userData DTO.UpdateUserRequestAdmin
 	if err := c.ShouldBindJSON(&userData); err != nil {
